Swagger half done
